- CHANGED: crud has nog get_row() - NEW: API controller has methods for field & table info - NEW: Busy with Form
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@2794 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 5b24ef1570c51cbb57c411190b80ff0473427ac3
Former-commit-id: 6d2589746550d7a41190851bb56a09d111f8c5d9
Former-commit-id: fd1f55f2be34d7f9e1d984368797b280f6afa3a5

--- a/sys/__test/flexy-form/flexy-form.html
+++ b/sys/__test/flexy-form/flexy-form.html
@@ -1,3 +1,10 @@
-<div id="form" class="">
-  <h2>Form will show here</h2>
+<div class="panel panel-primary flexy-form {{table}}" ng-controller="FormController">
+
+  <div class="panel-heading panel-title">
+    <h3>Formulier van {{table}}:{{id}}</h3>
+  </div>
+
+  <div class="panel-content">
+    <form sf-schema="schema" sf-form="form" sf-model="model"></form>
+  </div>
 </div>
