--- a/sys/__test/directives/decorators/bootstrap/select.html
+++ b/sys/__test/directives/decorators/bootstrap/select.html
@@ -2,15 +2,21 @@
   <label class="control-label" ng-show="showTitle()">
     {{form.title}}
   </label>
-  <select ng-model="$$value$$"
-          ng-model-options="form.ngModelOptions"
-          ng-disabled="form.readonly"
-          sf-changed="form"
-          class="form-control"
-          schema-validate="form"
-          ng-options="item.value as item.name for item in form.titleMap">
-  </select>
+
+  <div>
+    <select ng-model="$$value$$"
+            ng-model-options="form.ngModelOptions"
+            ng-disabled="form.readonly"
+            sf-changed="form"
+            class="form-control"
+            schema-validate="form"
+            ng-options="item.value as item.name for item in form.titleMap">
+    </select>
+
   <div class="help-block"
        ng-show="(hasError() && errorMessage(schemaError())) || form.description"
        ng-bind-html="(hasError() && errorMessage(schemaError())) || form.description"></div>
+       
+  </div>
+  
 </div>
