--- a/sys/__test/directives/decorators/bootstrap/submit.html
+++ b/sys/__test/directives/decorators/bootstrap/submit.html
@@ -1,12 +1,14 @@
-<div class="form-group">
-  <input type="submit"
-         class="btn {{ form.style || 'btn-primary' }}"
-         value="{{form.title}}"
-         ng-disabled="form.readonly"
-         ng-if="form.type === 'submit'">
-  <button class="btn {{ form.style || 'btn-default' }}"
-          type="button"
-          ng-click="buttonClick($event,form)"
-          ng-disabled="form.readonly"
-          ng-if="form.type !== 'submit'">{{form.title}}</button>
+<div class="form-group button-group">
+  <div>
+    <input type="submit"
+           class="btn {{ form.style || 'btn-primary' }}"
+           value="{{form.title}}"
+           ng-disabled="form.readonly"
+           ng-if="form.type === 'submit'">
+    <button class="btn {{ form.style || 'btn-default' }}"
+            type="button"
+            ng-click="buttonClick($event,form)"
+            ng-disabled="form.readonly"
+            ng-if="form.type !== 'submit'">{{form.title}}</button>
+  </div>
 </div>
