--- a/sys/__test/flexy-form/flexy-form.html
+++ b/sys/__test/flexy-form/flexy-form.html
@@ -1,10 +1,22 @@
 <div class="panel panel-primary flexy-form {{table}}" ng-controller="FormController">
 
   <div class="panel-heading panel-title">
-    <h3>Formulier van {{table}}:{{id}}</h3>
+    <h3>{{form_data.table_info.ui_name}}</h3>
   </div>
 
   <div class="panel-content">
-    <form sf-schema="schema" sf-form="form" sf-model="model"></form>
+    <form novalidate class="form-horizontal"
+          name="flexyform"
+          sf-schema="schema"
+          sf-form="form"
+          sf-model="model"
+          role="form"
+          ng-submit="onSubmit(flexyform)"></form>
+          
+    <div ng-show="flexyform.$valid" class="bg-info">Form is valid</div>
+    <div ng-show="flexyform.$invalid" class="bg-danger">Form is not valid</div>
+
   </div>
+  
+  
 </div>
