- NEW: Form has now tabs
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@2798 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 39fbafec318c9fe354678012c05966662dac24bf
Former-commit-id: 1a7f6e1b83f6f84d6490ab53b70394dddfd20f45
Former-commit-id: ab0772f99762411e152d46a121aa264979a900b4

--- a/sys/__test/flexy-form/flexy-form.html
+++ b/sys/__test/flexy-form/flexy-form.html
@@ -5,13 +5,10 @@
   </div>
 
   <div class="panel-content">
-    <form novalidate class="form-horizontal"
-          name="flexyform"
-          sf-schema="schema"
-          sf-form="form"
-          sf-model="model"
-          role="form"
-          ng-submit="onSubmit(flexyform)"></form>
+    <form novalidate class="form-horizontal" name="flexyform" role="form" ng-submit="onSubmit(flexyform)">
+      <button class="btn btn-primary pull-right" type="submit">Invoeren</button>
+      <div sf-schema="schema" sf-form="form" sf-model="model"></div>
+    </form>
           
     <div ng-show="flexyform.$valid" class="bg-info">Form is valid</div>
     <div ng-show="flexyform.$invalid" class="bg-danger">Form is not valid</div>
