--- a/sys/__test/flexy-ui/flexy-home.html
+++ b/sys/__test/flexy-ui/flexy-home.html
@@ -1,4 +1,4 @@
-<div class="panel panel-primary flexy-home">
+<div class="panel panel-primary flexy-home" ng-controller="WizardController">
   <div class="panel-heading panel-title"><h3>Wat wil je doen?</h3></div>
   <div class="panel-content">
     <div class="btn-group-vertical">
@@ -8,7 +8,7 @@
     </div>
     <div class="btn-group-vertical">
       <div class="btn btn-default"><span class="btn btn-info glyphicon glyphicon-stats"></span><a href="">Statistieken bekijken</a></div>
-      <div class="btn btn-default"><span class="btn btn-info glyphicon glyphicon-user"></span><a href="">Mijn gegevens aanpassen</a></div>
+      <div class="btn btn-default"><span class="btn btn-info glyphicon glyphicon-user"></span><a href="{{uris.edit_user}}">Mijn gegevens aanpassen</a></div>
       <div class="btn btn-default"><span class="btn btn-info glyphicon glyphicon-question-sign"></span><a href="">Een korte uitleg zien</a></div>
     </div>
   </div>
