- NEW: Help pages (busy)
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@2864 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 2c9792359fa60b118b22d4d461605606b56bc363
Former-commit-id: 530eeaaff720c1360703e69177c7b8def6866ff7
Former-commit-id: e3337a96008dedd5daf0ee9d9fa2c4ce8129ee91

--- a/sys/__test/flexy-help/help.html
+++ b/sys/__test/flexy-help/help.html
@@ -1,4 +1,4 @@
-<div class="panel panel-primary">
-  <h2 class="panel-heading panel-title">{{title}}</h2>
-  <div class="panel-content" ng-bind-html="html"></div>
+<div class="panel panel-primary" ng-controller="flexyHelpController">
+  <div class="panel-heading panel-title"><h3>{{title}}</h3></div>
+  <div class="panel-content" ng-bind-html="help">{{help}}</div>
 </div>
