- NEW: href changed to ng-href - NEW: play a bit with Karma
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@2872 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: ecd6ae9960ffdc18c12ac6b2738ce442c53996e6
Former-commit-id: 16c89192de1bcc669ed62b035f5f221bd2db3ce7
Former-commit-id: 257538819500d82844679c40128b40a07211bd2c

--- a/sys/__test/flexy-grid/flexy-grid.html
+++ b/sys/__test/flexy-grid/flexy-grid.html
@@ -41,7 +41,7 @@
             sortable-item>
           <td class="edit">
             <div class="btn-group btn-group-xs">
-              <a href="{{base_url}}#form/{{table}}/{{row.id}}" class="btn btn-primary action-edit"><span class="glyphicon glyphicon-pencil"></span></a>
+              <a ng-href="{{base_url}}#form/{{table}}/{{row.id}}" class="btn btn-primary action-edit"><span class="glyphicon glyphicon-pencil"></span></a>
             </div>
             <div class="btn-group btn-group-xs">
               <div class="btn btn-info action-select" ng-click="toggleSelection($index)"><span class="flexy-grid-unselected glyphicon glyphicon-unchecked"></span><span class="flexy-grid-selected glyphicon glyphicon-check"></span></div>
