--- a/sys/__test/flexy-ui/flexy-home.html
+++ b/sys/__test/flexy-ui/flexy-home.html
@@ -2,14 +2,14 @@
   <div class="panel-heading panel-title"><h3>Wat wil je doen?</h3></div>
   <div class="panel-content">
     <div class="btn-group-vertical">
-      <div class="btn btn-default"><span class="btn btn-primary glyphicon glyphicon-plus"></span><a href="">Iets toevoegen</a></div>
-      <div class="btn btn-default"><span class="btn btn-warning glyphicon glyphicon-pencil"></span><a href="">Iets aanpassen of bekijken</a></div>
-      <div class="btn btn-default"><span class="btn btn-danger glyphicon glyphicon-remove"></span><a href="">Iets verwijderen</a></div>
+      <div class="btn btn-default"><span class="btn btn-primary glyphicon glyphicon-plus"></span><a ng-href="">Iets toevoegen</a></div>
+      <div class="btn btn-default"><span class="btn btn-warning glyphicon glyphicon-pencil"></span><a ng-href="">Iets aanpassen of bekijken</a></div>
+      <div class="btn btn-default"><span class="btn btn-danger glyphicon glyphicon-remove"></span><a ng-href="">Iets verwijderen</a></div>
     </div>
     <div class="btn-group-vertical">
-      <div class="btn btn-default"><span class="btn btn-info glyphicon glyphicon-stats"></span><a href="">Statistieken bekijken</a></div>
-      <div class="btn btn-default"><span class="btn btn-info glyphicon glyphicon-user"></span><a href="{{uris.edit_user}}">Mijn gegevens aanpassen</a></div>
-      <div class="btn btn-default"><span class="btn btn-info glyphicon glyphicon-question-sign"></span><a href="">Een korte uitleg zien</a></div>
+      <div class="btn btn-default"><span class="btn btn-info glyphicon glyphicon-stats"></span><a ng-href="">Statistieken bekijken</a></div>
+      <div class="btn btn-default"><span class="btn btn-info glyphicon glyphicon-user"></span><a ng-href="{{uris.edit_user}}">Mijn gegevens aanpassen</a></div>
+      <div class="btn btn-default"><span class="btn btn-info glyphicon glyphicon-question-sign"></span><a ng-href="">Een korte uitleg zien</a></div>
     </div>
   </div>
 </div>
