--- a/sys/__test/flexy-menu/flexy-menu.html
+++ b/sys/__test/flexy-menu/flexy-menu.html
@@ -1,4 +1,4 @@
-<ul class="flexy-menu nav {{uiclass}}" ng-class="type=='sidebar'?'navbar navbar-default':''" role="navigation" data-ng-repeat="navbar in menu[type]">
+<ul class="flexy-menu nav {{uiclass}}" ng-class="type=='sidebar'?'navbar navbar-default':''" role="navigation" data-ng-repeat="navbar in items">
   <li data-ng-repeat="item in navbar" class="{{item.class}}" ng-class="{active:isActive(item.href)}">
     <a class="{{item.class}}" ng-href="{{item.href}}" title="{{item.name}}">
       <span class="{{item.glyphicon}}"></span>{{item.name}}
