- NEW: proof of concept for media: getting, deleting and uploading
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3006 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: cacbcfea8075b661ab1118ea6fa13e4efacfabbb
Former-commit-id: 612004e3ca72b15562eef4c67e4daa7feda5a974
Former-commit-id: 2049d2b1b7d0d0ee2b3ca07d7f9c3ede94ecc170

--- a/sys/__test/flexy-media/flexy-media.html
+++ b/sys/__test/flexy-media/flexy-media.html
@@ -48,7 +48,7 @@
 
     <div id="test-current-files" class="row" nv-file-over="" uploader="uploader">
       <div class="col-sm-4 row" ng-repeat="file in files">
-        <img src="site/assets/{{file.path}}/{{file.file}}" class="img-responsive col-sm-6" alt="{{file.str_title}}" title="{{file.str_title}} | {{file.file}}" />
+        <img ng-src="site/assets/{{file.path}}/{{file.file}}" class="img-responsive col-sm-6" alt="{{file.str_title}}" title="{{file.str_title}} | {{file.file}}" />
         <div class="col-sm-6">
           <button class="btn btn-danger btn-xs" ng-click="removeFile(file.path,file.file)"><span class="glyphicon glyphicon-trash"></span></button>
           <h4 class="media-heading">{{file.str_title}}</h4>
