- NEW: flexy-grid better class names
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3023 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 96c938a0cede20f771e65a784c000871003e3bbd
Former-commit-id: 0ba229ed392d880c7f4103cbcdfe771804fe3b83
Former-commit-id: 7328d4ca14f8c071712da3635111648f59847241

--- a/sys/__test/flexy-grid/flexy-grid.html
+++ b/sys/__test/flexy-grid/flexy-grid.html
@@ -34,7 +34,7 @@
       
       <tbody sortable="sortableOptions" ng-model="gridItems">
         <tr ng-repeat="row in gridItems"
-            ng-class="{'flexy-tree-branch':row._info.has_children, 'flexy-tree-node':row._info.is_child, 'flexy-grid-selected':row._info.selected}"
+            ng-class="{'flexy-tree-has_children':row._info.has_children, 'flexy-tree-child':row._info.is_child, 'flexy-grid-selected':row._info.selected}"
             tree-level="{{row._info.level}}"
             id="{{row.id}}"
             sortable-item>
