--- a/sys/__test/flexy-grid/flexy-grid.html
+++ b/sys/__test/flexy-grid/flexy-grid.html
@@ -12,9 +12,9 @@
   </div>
 
   <div class="panel-content">
-    <table st-table="displayedItems" st-safe-src="gridItems"
+    <table st-delay="200" st-table="displayedItems" st-safe-src="gridItems"
       class="table table-striped table-hover table-condensed table-responsive table-bordered"
-      ng-class="{'table-sortable': type.is_sortable, 'table-tree': type.is_tree, 'flexy-grid-has-selection':has_selection}">
+      ng-class="{'table-sortable': type.is_sortable, 'table-tree': type.is_tree}">
 
       <!-- Table Head -->
       <thead>
@@ -53,6 +53,7 @@
       <!-- Table Body -->
       <tbody>
         <tr ng-repeat="row in displayedItems"
+            st-select-row="row" st-select-mode="multiple"
             ng-class="{'flexy-tree-has_children':row._info.has_children, 'flexy-tree-child':row._info.is_child, 'flexy-grid-selected':row._info.selected}"
             tree-level="{{row._info.level}}"
             id="{{row.id}}">
@@ -65,7 +66,7 @@
             </div>
             <div class="btn-group btn-group-xs">
               <!-- Select button -->
-              <div class="btn btn-info action-select" ng-click="toggleSelection($index)"><span class="flexy-grid-unselected glyphicon glyphicon-unchecked"></span><span class="flexy-grid-selected glyphicon glyphicon-check"></span></div>
+              <div class="btn btn-info action-select"><span class="flexy-grid-unselected glyphicon glyphicon-unchecked"></span><span class="flexy-grid-selected glyphicon glyphicon-check"></span></div>
               <!-- Delete button -->
               <div class="btn btn-danger action-remove"><span class="glyphicon glyphicon-remove"></span></div>
             </div>
@@ -76,7 +77,7 @@
           </td>
 
           <!-- Field Values -->
-          <td ng-repeat="key in keys(row)" class="{{fields[key].type}} {{key}}">
+          <td ng-repeat="key in orderedKeys(row)" class="{{fields[key].type}} {{key}}">
             {{row[key]}}
           </td>
 
