- NEW: Grid: pagination & info in fixed footer - API: info before data in response
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3032 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: ab89577aa08f8252d5a19ccce81132bd70d85ff6
Former-commit-id: 661bf69a4c5f1c5fa23b263a6711f1da80535a7e
Former-commit-id: 5bb613e8b5f8560c8326581b4fcd5b644b9c096f

--- a/sys/__test/flexy-grid/flexy-grid.html
+++ b/sys/__test/flexy-grid/flexy-grid.html
@@ -84,12 +84,19 @@
         </tr>
       </tbody>
       
+      <tfoot>
+  			<tr>
+  				<td colspan="0" class="text-primary">
+            <div>
+              <!-- Pagination -->
+    					<div class="flexy-grid-pagination" st-pagination="" st-template="flexy-grid/flexy-grid-pagination.html" st-items-by-page="info.limit" st-displayed-pages="info.displayed_pages"></div>
+              <!-- Info -->
+              <div class="flexy-grid-stats">{{info.rows}} items on {{info.total_pages}} pages</div>
+            </div>
+  				</td>
+  			</tr>
+  		</tfoot>
+      
     </table>
-  </div>
-  
-  <div class="panel-footer text-primary">
-    <!-- Pagination -->
-    <!-- Info -->
-    <span class="table-stats">{{info.rows}} items on {{info.total_pages}} pages</span>
   </div>
 </div>
