- BUSY: TableModel -> get_grid() Jump_to_today - CHANGED: debug_helper trace_sql() - CHANGED: MY_string_helper get_suffix() kan nu ook met arrays overweg
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3415 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 144c3db8fb9bb24cd048f93b941626b5de96d855
Former-commit-id: 823f4c7fc07093d13b7589711c12cc05c2429a9e
Former-commit-id: 89640cd49885a82d46a721d6244c69e3535676c7 [formerly 68fce09caea7aef441487ea8b9926c0368aca3e4]
Former-commit-id: 1ffa0df74333d884778418fdc8dd9481b40bd411

--- a/sys/__test/flexy-grid/flexy-grid.html
+++ b/sys/__test/flexy-grid/flexy-grid.html
@@ -86,7 +86,7 @@
     <!-- Pagination -->
 		<div class="flexy-grid-pagination" st-pagination="" st-template="flexy-grid/flexy-grid-pagination.html" st-items-by-page="info.limit" st-displayed-pages="info.displayed_pages"></div>
     <!-- Info -->
-    <div class="flexy-grid-stats">{{info.rows}} items on {{info.total_pages}} pages</div>
+    <div class="flexy-grid-stats">{{info.total_rows}} items on {{info.num_pages}} pages</div>
   </div>
   
 </div>
