- TableModel->get_grid() - pagination, sorting and filtering now works - NEW: gridview has now server side pagination, and sorting and filtering - NEW: gridview adjusts pagination by screensize - NEW: some bugs
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3428 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 55d73918aa4339d5d575350689142a743f7468d0
Former-commit-id: bbf9a09aa95abd0816aa5420228a701e25ef771c
Former-commit-id: cab23b39af9ad9687ab730a5a81b1ddc59b90d2d [formerly 3ca2ca2148ff8827e46a72e30239d471ab4fa25f]
Former-commit-id: f6fc83cf24d55a31b919573e1151a3f82712e10c

--- a/sys/__test/flexy-grid/flexy-grid.html
+++ b/sys/__test/flexy-grid/flexy-grid.html
@@ -1,4 +1,5 @@
-<div class="panel panel-primary flexy-grid {{table}}" ng-controller="GridController" st-delay="200" st-table="displayedItems" st-safe-src="gridItems">
+<div class="controller" ng-controller="GridController">
+<div class="panel panel-primary flexy-grid {{table}}" st-pipe="pipe" st-delay="200" st-table="displayedItems">
 
   <div class="panel-heading panel-title">
     <!-- Title -->
@@ -12,7 +13,7 @@
   </div>
 
   <div class="panel-content">
-    <table 
+    <table
       class="table table-striped table-hover table-condensed table-responsive table-bordered"
       ng-class="{'table-sortable': type.is_sortable, 'table-tree': type.is_tree}">
 
@@ -84,9 +85,10 @@
 
   <div class="panel-footer text-primary">
     <!-- Pagination -->
-		<div class="flexy-grid-pagination" st-pagination="" st-template="flexy-grid/flexy-grid-pagination.html" st-items-by-page="info.limit" st-displayed-pages="info.displayed_pages"></div>
+		<div class="flexy-grid-pagination" st-pagination="" st-template="flexy-grid/flexy-grid-pagination.html" st-items-by-page="info.limit" st-displayed-pages="5"></div>
     <!-- Info -->
     <div class="flexy-grid-stats">{{info.total_rows}} items on {{info.num_pages}} pages</div>
   </div>
   
+</div>
 </div>
