- NEW: added translate service - NEW: added alert service - NEW: added dialig service - NEW: grid DELETE works now (with dialog / alert / translation)
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3430 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 7687f291750480910027949c2cfafc66dbda2d34
Former-commit-id: c6770ee014e607608ffe9fe5ac6d7bf7da29d5ce
Former-commit-id: f6a73d69438a109586b46d0025d0203945b5b5db [formerly 401f6d905ddf52bb0558a22da4cea119e15c8caa]
Former-commit-id: 66cc02accf6ee4887c10f96b45aecb3726e9b9f8

--- a/sys/__test/flexy-grid/flexy-grid.html
+++ b/sys/__test/flexy-grid/flexy-grid.html
@@ -63,7 +63,7 @@
               <!-- Select button -->
               <div class="btn btn-info action-select"><span class="flexy-grid-unselected glyphicon glyphicon-unchecked"></span><span class="flexy-grid-selected glyphicon glyphicon-check"></span></div>
               <!-- Delete button -->
-              <div class="btn btn-danger action-remove"><span class="glyphicon glyphicon-remove"></span></div>
+              <div ng-click="delete(table,row.id)" class="btn btn-danger action-remove"><span class="glyphicon glyphicon-remove"></span></div>
             </div>
             <div class="btn-group btn-group-xs as-sortable-handle" as-sortable-item-handle>
               <!-- Order button -->
@@ -87,7 +87,7 @@
     <!-- Pagination -->
 		<div class="flexy-grid-pagination" st-pagination="" st-template="flexy-grid/flexy-grid-pagination.html" st-items-by-page="info.limit" st-displayed-pages="5"></div>
     <!-- Info -->
-    <div class="flexy-grid-stats">{{info.total_rows}} items on {{info.num_pages}} pages</div>
+    <div class="flexy-grid-stats">{{info.total_rows}} <span translate>ITEMS_ON</span> {{info.num_pages}} <span translate>PAGES</span></div>
   </div>
   
 </div>
