- NEW: better gulp - NEW: nicer translations
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3431 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: c875e4e1b16e52b1a22fb764e690b96b6bd10d7a
Former-commit-id: c6e86877a44c1bd1ef9678b050f68295f0cae4f3
Former-commit-id: a375c8668c5d0fac420e8edc8e42a8d2433c7126 [formerly 53928699987a1653170490841cff7ada61449a0f]
Former-commit-id: ec7b0847c975d2a154d9a2b9defa794c0aa76c60

--- a/sys/__test/flexy-grid/flexy-grid.html
+++ b/sys/__test/flexy-grid/flexy-grid.html
@@ -87,7 +87,7 @@
     <!-- Pagination -->
 		<div class="flexy-grid-pagination" st-pagination="" st-template="flexy-grid/flexy-grid-pagination.html" st-items-by-page="info.limit" st-displayed-pages="5"></div>
     <!-- Info -->
-    <div class="flexy-grid-stats">{{info.total_rows}} <span translate>ITEMS_ON</span> {{info.num_pages}} <span translate>PAGES</span></div>
+    <div class="flexy-grid-stats"><span translate="ITEMS_ON_PAGE" translate-values="{rows: info.total_rows, pages: info.num_pages}"></span></div>
   </div>
   
 </div>
