--- a/sys/__test/flexy-grid/flexy-grid.html
+++ b/sys/__test/flexy-grid/flexy-grid.html
@@ -28,7 +28,7 @@
             </div>
             <div class="btn-group btn-group-xs">
               <div class="btn btn-info action-select" ng-click="toggleSelection()"><span class="flexy-grid-unselected glyphicon glyphicon-unchecked"></div>
-              <div class="btn btn-danger action-remove"><span class="glyphicon glyphicon-remove"></span></div>
+              <div class="btn btn-danger action-remove" ng-click="deleteSelected(table)"><span class="glyphicon glyphicon-remove"></span></div>
             </div>
           </th>
           
