- TABLE_MODEL: jump_to_today only set if possible - TABLE_MODEL: query_info[‘jump_to_today’] set when jumped to today - NEW: grid better code - NEW: grid jump to today - NEW: grid styling - NEW: grid inactive order buttons when a filter is active - NEW: BUG… sorting of columns doesn’t work anymore…
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3446 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 9d60115a1577bb27f712570554204a3b7e8b060c
Former-commit-id: 9e394f5936b514a72ea6d191b4f8104cfde4e3fc
Former-commit-id: 8ff5076322402e752b04a4eb366a254b28562984 [formerly 79c46586b02944f6074720581807e0f39b99db1f]
Former-commit-id: cb2eb24c6f8eb755c63ffb1382b477d4c9ee5241

--- a/sys/__test/flexy-grid/flexy-grid.html
+++ b/sys/__test/flexy-grid/flexy-grid.html
@@ -1,5 +1,5 @@
 <div class="controller" ng-controller="GridController">
-<div class="panel panel-primary flexy-grid {{table}}" st-pipe="pipe" st-delay="200" st-table="displayedItems">
+<div class="panel panel-primary flexy-grid {{table}}" st-pipe="pipe" st-table="displayedItems">
 
   <div class="panel-heading panel-title">
     <!-- Title -->
@@ -67,7 +67,7 @@
             </div>
             <div class="btn-group btn-group-xs as-sortable-handle" as-sortable-item-handle>
               <!-- Order button -->
-              <div class="btn btn-warning action-move"><span class="glyphicon glyphicon-resize-vertical"></span></div>
+              <div class="btn btn-warning action-move" ng-disabled="search"><span class="glyphicon glyphicon-resize-vertical"></span></div>
             </div>
           </td>
 
@@ -86,6 +86,8 @@
   <div class="panel-footer text-primary">
     <!-- Pagination -->
 		<div class="flexy-grid-pagination" st-pagination="" st-template="flexy-grid/flexy-grid-pagination.html" st-items-by-page="info.limit" st-displayed-pages="5"></div>
+    <!--Jump to today -->
+    <div ng-if="jump_to_today" ng-click="jump_to_page_with_today(table)" class="btn btn-default button-jump-to-today" ng-class="{'btn-primary' : info.today}" translate="JUMP_TO_TODAY"></div>
     <!-- Info -->
     <div class="flexy-grid-stats"><span translate="ITEMS_ON_PAGE" translate-values="{rows: info.total_rows, pages: info.num_pages}"></span></div>
   </div>
