- NEW: FlexyField directive - NEW: FlexyFieldThumbs directive
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3453 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 31ba1190ee3f85e432315049d44e542f6fda2f61
Former-commit-id: d141e194543f06ce5f5df6e2c709cf0c978fcc4c
Former-commit-id: 312a4eb3f357495ecbab484a2cf9c0e7ea6338d0 [formerly c164eebdc8408d37dc93b371432aea4c61908cf7]
Former-commit-id: b74396027816141a55a4f8a9a597fac6554a5f69

--- a/sys/__test/flexy-grid/flexy-grid-directive.html
+++ b/sys/__test/flexy-grid/flexy-grid-directive.html
@@ -73,7 +73,7 @@
 
           <!-- ROW Fields -->
           <td ng-repeat="key in orderedKeys(row)" class="flexy-grid-field-type-{{fields[key].type}} flexy-grid-field-{{key}}">
-            {{row[key]}}
+            <flexy-field table="{{table}}" data-id="{{row.id}}" field="{{key}}" value="{{row[key]}}"></flexy-field>
           </td>
 
         </tr>
