- NEW: BUG with flexy-field showing value - NEW: BUG with flexy-table next page items (ng-repeat track by $index gives error results in combination with ng-sortable) - NEW: Styling of sortable - NEW: BUSY Sortable moving items to other page
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3467 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 89806af701391d8a4298382de11b84882e58a309
Former-commit-id: b3452d399aeec9a662e6982eca667914a35f19e7
Former-commit-id: 0dfbbb5897edfd355434823eb0927336d585afc5 [formerly 7aab2801b24f9b1b48e4b287fa39056f9ea51059]
Former-commit-id: 2be739ca3724ac434c078ac6767e19842103e6e6

--- a/sys/__test/flexy-table/flexy-table.html
+++ b/sys/__test/flexy-table/flexy-table.html
@@ -46,7 +46,7 @@
       <tbody as-sortable="sortableOptions" ng-model="gridItems">
         
         <!-- ROW -->
-        <tr ng-repeat="row in displayedItems track by $index"
+        <tr ng-repeat="row in displayedItems"
             st-select-row="row" st-select-mode="multiple"
             ng-class="{'flexy-tree-has_children':row._info.has_children, 'flexy-tree-child':row._info.is_child, 'flexy-table-selected':row._info.selected}"
             tree-level="{{row._info.level}}"
