--- a/sys/__test/flexy-table/flexy-table.html
+++ b/sys/__test/flexy-table/flexy-table.html
@@ -1,5 +1,5 @@
 <div>
-<div class="panel panel-primary flexy-table {{table}}" st-pipe="pipe" st-table="displayedItems">
+<div class="panel panel-primary flexy-table flexy-table_{{table}}" st-pipe="pipe" st-table="displayedItems">
 
   <div class="panel-heading panel-title">
     <!-- Title -->
@@ -14,6 +14,7 @@
 
   <div class="panel-content">
     <table
+      data-table="{{table}}"
       class="table table-striped table-hover table-condensed table-responsive table-bordered"
       ng-class="{'table-sortable': type.is_sortable, 'table-tree': type.is_tree}">
 
@@ -43,7 +44,7 @@
       </thead>
 
       <!-- Table Body -->
-      <tbody as-sortable="sortableOptions" ng-model="gridItems">
+      <tbody as-sortable="sortableOptions" ng-model="tableItems">
         
         <!-- ROW -->
         <tr ng-repeat="row in displayedItems"
