- NEW: Media grid (views, filetypes)
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3510 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: b0857a76b95cc7c2debdc56c472fa9426c969ee5
Former-commit-id: bd3ccd48738ee9bbdc28cc97224da90ff6a417f6
Former-commit-id: 1c29eebd5a8c4c982b272804f7400864bb488a22 [formerly 2d08895d2b0ce6d26530db3b9fb46b530965fc85]
Former-commit-id: 814e5637e1ba35ec157b1b4417999301fecac15e

--- a/sys/__test/flexy-table/flexy-field-thumb.html
+++ b/sys/__test/flexy-table/flexy-field-thumb.html
@@ -1,3 +1,6 @@
 <div ng-repeat="thumb in thumbs" class="thumb">
-  <img ng-if="thumb.src!==''" ng-src="{{thumb.thumb}}" alt="{{thumb.alt}}" title="{{thumb.alt}}" />
+  <ng-switch on="thumb.type">
+    <img ng-switch-when="file-image"  ng-src="{{thumb.thumb}}" alt="{{thumb.alt}}" title="{{thumb.alt}}" />
+    <span ng-switch-default class="fa fa-{{thumb.type}}-o" title="{{thumb.alt}}"></span>
+  </ng-switch>
 </div>
