- TableModel: get_row( -1 ) gives defaults - NEW: Busy with form
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3514 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 78ed2d707c33a20f6ee0d599290222c6cb637bc1
Former-commit-id: f5300b8e1db5b73b2432734d1ce59767e628b1ee
Former-commit-id: d64a7f7688e00635c906141705a2d3c2008aaf55 [formerly 07508444593cbdf4bbf340e1b0b24898e1f6366b]
Former-commit-id: 0331399cd57090274bbe50b713773c67a62a1b47

--- a/sys/__test/flexy-form/flexy-form.html
+++ b/sys/__test/flexy-form/flexy-form.html
@@ -3,10 +3,9 @@
   <div class="panel-heading panel-title">
     <h3>{{form_data.table_info.ui_name}}</h3>
     <div class="btn-group btn-group-sm">
-      <button class="btn btn-info" ng-disabled="flexyform.$pristine" type="button" ng-click="submitForm(flexyform)">Invoeren<span class="glyphicon glyphicon-floppy-disk"></span></button>
-      <button class="btn btn-info" ng-disabled="flexyform.$pristine" type="button" ng-click="submitForm(flexyform)"><span class="glyphicon glyphicon-floppy-saved"></span></button>
-      <button class="btn btn-warning" ng-disabled="flexyform.$pristine" type="button" ng-click="resetForm(flexyform)"><span class="glyphicon glyphicon-refresh"></span></button>
-      <a href="javascript:window.history.back()" class="btn btn-danger"><span class="glyphicon glyphicon-remove"></span></a>
+      <!-- <button class="btn btn-warning" ng-disabled="flexyform.$pristine" type="button" ng-click="resetForm(flexyform)"><span translate="FORM_RESET"></span><span class="glyphicon glyphicon-refresh"></span></button> -->
+      <a href="javascript:window.history.back()" class="btn btn-danger"><span translate="FORM_CANCEL"></span><span class="glyphicon glyphicon-remove"></span></a>
+      <button class="btn btn-info" ng-disabled="flexyform.$pristine" type="button" ng-click="submitForm(flexyform)"><span translate="FORM_SUBMIT"></span><span class="glyphicon glyphicon-floppy-disk"></span></button>
     </div>
   </div>
 
@@ -15,6 +14,5 @@
       <div sf-schema="schema" sf-form="form" sf-model="model"></div>
     </form>
   </div>
-  
   
 </div>
