--- a/sys/__test/flexy-table/flexy-table.html
+++ b/sys/__test/flexy-table/flexy-table.html
@@ -25,7 +25,7 @@
         <tr>
           <th class="edit">
             <div class="btn-group btn-group-xs">
-              <div class="btn btn-primary action-new"><span class="glyphicon glyphicon-plus"></span></div>
+              <a ng-href="{{base_url}}#form/{{table}}/-1" class="btn btn-primary action-new"><span class="glyphicon glyphicon-plus"></span></a>
             </div>
             <div class="btn-group btn-group-xs">
               <div class="btn btn-info action-select" ng-click="toggleSelection()"><span class="flexy-table-unselected glyphicon glyphicon-unchecked"></div>
