- NEW: BUSY FORM
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3522 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: fc510a5d2de80ac67f580f01832c654457c2e517
Former-commit-id: 30dd587085786078e5e6724d83f6aadb9030f568
Former-commit-id: 33c89f3be890a50dcebddefa8d842f76c676c5ab [formerly b62b897bbcbf88703689752b5ad64623070549b2]
Former-commit-id: a74039f877c7fc1f2450d76e5ea531250c6c12ff

--- a/sys/__test/flexy-form/flexy-form.html
+++ b/sys/__test/flexy-form/flexy-form.html
@@ -1,7 +1,7 @@
-<div class="panel panel-primary flexy-form {{table}}" ng-controller="FormController">
+<div class="panel panel-primary flexy-form">
 
   <div class="panel-heading panel-title">
-    <h3>{{form_data.table_info.ui_name}}</h3>
+    <h3>{{ui_name}}</h3>
     <div class="btn-group btn-group-sm">
       <!-- <button class="btn btn-warning" ng-disabled="flexyform.$pristine" type="button" ng-click="resetForm(flexyform)"><span translate="FORM_RESET"></span><span class="glyphicon glyphicon-refresh"></span></button> -->
       <a href="javascript:window.history.back()" class="btn btn-danger"><span translate="FORM_CANCEL"></span><span class="glyphicon glyphicon-remove"></span></a>
