- TableModel: Added schemaform output - NEW: Busy with form (with schemaform from API)
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3524 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 7e4bb6bfecd2f3b89ee01cf6b67c8a6c0894eefc
Former-commit-id: 877f7ddca2ba2b23b60e6d8eb3dafc8865888c19
Former-commit-id: 7eb96fa3b06407df37695bf864d37689e83f95c6 [formerly 04630ac4c6ef4d5579259a1d46b3dfbc051acc5b]
Former-commit-id: 074b0e8998a4b749a6ea1dd75fab3d9b5a19305d

--- a/sys/__test/directives/decorators/bootstrap/checkbox.html
+++ b/sys/__test/directives/decorators/bootstrap/checkbox.html
@@ -1,13 +1,17 @@
-<div class="checkbox" ng-class="{'has-error': hasError(), 'has-success': hasSuccess()}">
-  <label>
+<div class="form-group has-feedback" ng-class="{'has-error': hasError(), 'has-success': hasSuccess()}">
+  
+  <label class="control-label" ng-show="showTitle()">{{form.title}}</label>
+
+  <div>
     <input type="checkbox"
            sf-changed="form"
            ng-disabled="form.readonly"
            ng-model="$$value$$"
            ng-model-options="form.ngModelOptions"
            schema-validate="form">
-    <span ng-bind-html="form.title"></span>
-  </label>
+    </input>
 
-  <div class="help-block" ng-show="form.description" ng-bind-html="form.description"></div>
+    <span class="help-block">{{ (hasError() && errorMessage(schemaError())) || form.description}}</span>
+  </div>
+  
 </div>
