--- a/sys/__test/directives/decorators/bootstrap/froala/froala.html
+++ b/sys/__test/directives/decorators/bootstrap/froala/froala.html
@@ -10,7 +10,8 @@
               ng-model="$$value$$"
               ng-model-options="form.ngModelOptions"
               schema-validate="form"
-              rows="4"></textarea>
+              rows="4">
+    </textarea>
 
     <span class="help-block">{{ (hasError() && errorMessage(schemaError())) || form.description}}</span>
   </div>
