--- a/sys/__test/flexy-form/flexy-form.html
+++ b/sys/__test/flexy-form/flexy-form.html
@@ -6,14 +6,14 @@
       <!-- <button class="btn btn-warning" ng-disabled="flexyform.$pristine" type="button" ng-click="resetForm(flexyform)"><span translate="FORM_RESET"></span><span class="glyphicon glyphicon-refresh"></span></button> -->
       <a href="javascript:window.history.back()" class="btn btn-danger"><span translate="FORM_CANCEL"></span><span class="glyphicon glyphicon-remove"></span></a>
       <button class="btn btn-info" ng-disabled="!flexyform.$valid" type="button" ng-click="saveForm(flexyform)"><span translate="FORM_SAVE"></span><span class="glyphicon glyphicon-floppy-disk"></span></button>
-      <button class="btn btn-info" ng-disabled="!flexyform.$valid" type="button" ng-click="submitForm(flexyform)"><span translate="FORM_SUBMIT"></span><span class="glyphicon glyphicon-ok"></span></button>
+      <button class="btn btn-success" ng-disabled="!flexyform.$valid" type="button" ng-click="submitForm(flexyform)"><span translate="FORM_SUBMIT"></span><span class="glyphicon glyphicon-ok"></span></button>
     </div>
   </div>
 
   <div class="panel-content">
     <form novalidate class="form-horizontal" name="flexyform" role="form" ng-submit="submitForm(flexyform)">
       <div sf-schema="schema" sf-form="form" sf-model="model"></div>
-      <input type="submit" value="TEST SUBMIT" />
+      <input type="submit" value="SUBMIT" class="hidden" />
     </form>
   </div>
   
