--- a/sys/__test/flexy-table/flexy-field.html
+++ b/sys/__test/flexy-table/flexy-field.html
@@ -13,6 +13,10 @@
   <flexy-field-thumb ng-switch-when="file" path="{{path}}" file="{{value}}"></flexy-field-thumb>
   <flexy-field-thumb ng-switch-when="media" path="{{path}}" file="{{value}}"></flexy-field-thumb>
   <flexy-field-thumb ng-switch-when="medias" path="{{path}}" file="{{value}}"></flexy-field-thumb>
+
+  <!-- HTML -->
+  <span ng-switch-when="txt">{{ value | stripTags }}</span>
   
   <span ng-switch-default>{{value}}</span>
+  
 </ng-switch>
