--- a/sys/__test/flexy-table/flexy-field.html
+++ b/sys/__test/flexy-table/flexy-field.html
@@ -1,5 +1,8 @@
 <ng-switch on="field_type">
 
+  <!-- FOREIGN KEY -->
+  <span ng-switch-when="foreign_key">{{name}}</span>
+
   <!-- BOOL -->
   <span ng-switch-when="bool" class="glyphicon" ng-class="{'glyphicon-ok text-success':value==1, 'glyphicon-minus text-danger':value!=1}"></span>
   
