--- a/sys/__test/flexy-table/flexy-field-thumb.html
+++ b/sys/__test/flexy-table/flexy-field-thumb.html
@@ -1,6 +1,9 @@
-<div ng-repeat="thumb in thumbs" class="thumb">
-  <ng-switch on="thumb.type">
-    <img ng-switch-when="file-image"  ng-src="{{thumb.thumb}}" alt="{{thumb.alt}}" title="{{thumb.alt}}" />
-    <span ng-switch-default class="fa fa-{{thumb.type}}-o" title="{{thumb.alt}}"></span>
-  </ng-switch>
+<div ng-repeat="thumb in thumbs">
+  <div class="thumbnail">
+    <ng-switch on="thumb.type">
+      <img ng-switch-when="file-image"  ng-src="{{thumb.thumb}}" alt="{{thumb.alt}}" title="{{thumb.alt}}" />
+      <span ng-switch-default class="fa fa-{{thumb.type}}-o" title="{{thumb.alt}}"></span>
+    </ng-switch>
+    <div class="caption">{{thumb.alt}}</div>
+  </div>
 </div>
