--- a/sys/__test/flexy-table/flexy-table.html
+++ b/sys/__test/flexy-table/flexy-table.html
@@ -12,20 +12,19 @@
     </form>
   </div>
 
-  <div ng-if="type.is_media" ng-show="uploader_visible" class="panel-content bg-warning" ng-controller="flexyMediaCtrl" nv-file-drop="" uploader="uploader">
+  <div ng-if="type.is_media" ng-show="uploader_visible" class="panel-content flexy-table-uploader" ng-controller="flexyMediaCtrl" nv-file-drop="" uploader="uploader">
     
     <!-- Select file -->
-    <div class="file-browser bg-danger">
-      <input type="file" nv-file-select="" uploader="uploader" multiple  />
+    <div class="file-browser" ng-show="uploader.queue.length===0">
+      <flexy-file-field></flexy-file-field><h2><span translate="UPLOADER_DROP"></span>&nbsp;<i class="fa fa-cloud-download"></i></h2>
     </div>
     
     <!-- Upload que -->
-    <!-- <div class="media-upload-que" ng-show="uploader.queue.length > 0"> -->
-    <div class="media-upload-que bg-warning">
+    <div class="media-upload-que" ng-show="uploader.queue.length > 0">
       <table class="table">
         <thead>
-          <tr><td colspan="10"><strong><span translate="UPLOADING">Uploading</span></strong></td></tr>
-          <tr><th><span translate="UPLOADER_FILENAME"></span></th><th ng-show="uploader.isHTML5"><span translate="UPLOADER_SIZE"></span></th><th ng-show="uploader.isHTML5"><span translate="UPLOADER_PROGRESS"></span></th><th><span translate="UPLOADER_STATUS"></span></th><!-- <th><span translate="UPLOADER_ACTIONS"></span></th> --></tr>
+          <!-- <tr><td colspan="10"><strong><span translate="UPLOADING">Uploading</span></strong></td></tr> -->
+          <tr><th><span translate="UPLOADER_FILENAME"></span></th><th ng-show="uploader.isHTML5"><span translate="UPLOADER_SIZE"></span></th><th ng-show="uploader.isHTML5"><span translate="UPLOADER_PROGRESS"></span></th><!-- <th><span translate="UPLOADER_STATUS"></span></th> --><!-- <th><span translate="UPLOADER_ACTIONS"></span></th> --></tr>
         </thead>
         <tbody>
           <tr ng-repeat="item in uploader.queue">
@@ -34,12 +33,12 @@
               <span class="text-danger" ng-show="item.isError">{{item.error}}</span>
             </strong></td>
             <td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }}&nbsp;MB</td>
-            <td ng-show="uploader.isHTML5"><div class="progress"><div class="progress-bar" role="progressbar" ng-style="{ 'width': item.progress + '%' }"></div></div></td>
-            <td class="text-center">
+            <td ng-show="uploader.isHTML5"><div class="progress"><div class="progress-bar progress-bar-info" role="progressbar" ng-style="{ 'width': item.progress + '%' }"></div></div></td>
+            <!-- <td class="text-center">
               <span ng-show="item.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
               <span ng-show="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
               <span ng-show="item.isError" class="text-danger"><i class="glyphicon glyphicon-alert"></i></span>
-            </td>
+            </td> -->
             <!-- <td nowrap>
               <button type="button" class="btn btn-warning btn-xs" ng-click="item.cancel()" ng-disabled="!item.isUploading"><span class="glyphicon glyphicon-ban-circle"></span></button>
               <button type="button" class="btn btn-danger btn-xs" ng-click="item.remove()"><span class="glyphicon glyphicon-trash"></span></button>
