- NEW: Uploader -> drag ndrop on whole panel - NEW: Some styling issues with media
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3596 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 2ff69fafbcd5f2ffa65b707472d935b059140f02
Former-commit-id: 9cfc3398d074c8b32f327d7a28a20deb61199ede
Former-commit-id: 5a87500443987aa9bcee1335fede69009fbdf5c6 [formerly e7842448d9d8546c96d0b0f8bb8045f79eafc94b]
Former-commit-id: 4f3c50478e5e3c5c0b254e594ac50a2736173c5e

--- a/sys/__test/flexy-table/flexy-table.html
+++ b/sys/__test/flexy-table/flexy-table.html
@@ -1,5 +1,7 @@
 <div>
 <div class="panel panel-primary flexy-table flexy-table_{{table}}" st-pipe="pipe" st-table="displayedItems">
+  
+  <div ng-controller="flexyMediaCtrl" nv-file-drop="" uploader="uploader">
 
   <div class="panel-heading panel-title">
     <!-- Title -->
@@ -12,7 +14,7 @@
     </form>
   </div>
 
-  <div ng-if="type.is_media" ng-show="uploader_visible" class="panel-content flexy-table-uploader" ng-controller="flexyMediaCtrl" nv-file-drop="" uploader="uploader">
+  <div ng-if="type.is_media" ng-show="uploader_visible || uploader.queue.length > 0" class="panel-content flexy-table-uploader">
     
     <!-- Select file -->
     <div class="file-browser" ng-show="uploader.queue.length===0">
@@ -128,6 +130,8 @@
     <div ng-if="jump_to_today" ng-click="jump_to_page_with_today(table)" class="btn btn-default button-jump-to-today" ng-class="{'btn-primary' : info.today}" translate="JUMP_TO_TODAY"></div>
     <!-- Info -->
     <div class="flexy-table-stats"><span translate="ITEMS_ON_PAGE" translate-values="{rows: info.total_rows, pages: info.num_pages}"></span></div>
+  </div>
+  
   </div>
   
 </div>
