- NEW: Some styling of thumbnails in table
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3604 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: df653d1da636eeb6ab18da36cd64e80800864772
Former-commit-id: 36a462eb86c12f279718525794a9471f0d385e72
Former-commit-id: dbf1544d55edb710150811894968ccd99fe3a5d1 [formerly 81d0751355c84934e1e99f4f0c522df7a02ff884]
Former-commit-id: e8c487a538c507c19a1fbde5b3a4fada9ae989cb

--- a/sys/__test/flexy-table/flexy-field-thumb.html
+++ b/sys/__test/flexy-table/flexy-field-thumb.html
@@ -1,4 +1,4 @@
-<div ng-repeat="thumb in thumbs">
+<div class="flexy-field-thumb" ng-repeat="thumb in thumbs">
   <div class="thumbnail">
     <ng-switch on="thumb.type">
       <img ng-switch-when="file-image"  ng-src="{{thumb.thumb}}" alt="{{thumb.alt}}" title="{{thumb.alt}}" />
