- BREAKING CHANGE: Data model naming and results of relations are changed
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3618 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 1aec3ee5558c0afe10e1348458c6391c628a252d
Former-commit-id: b2700aeb50412dcf95a4287c8222d3af7cb356a7
Former-commit-id: 4411fd77c7fccb4ca1f43e53f1580dcc654ccfaf [formerly 455b8269d70c521d18f237b8d6fbec476fc60410]
Former-commit-id: 396ece5420ef1c9ae63e1e1ad00949b63905d683

--- a/sys/__test/flexy-table/flexy-field.html
+++ b/sys/__test/flexy-table/flexy-field.html
@@ -1,7 +1,10 @@
 <ng-switch on="field_type">
 
   <!-- FOREIGN KEY -->
-  <span ng-switch-when="foreign_key">{{name}}</span>
+  <span ng-switch-when="foreign_key">{{abstract}}</span>
+  
+  <!-- HIDDEN -->
+  <span ng-switch-when="hidden" class="hidden"></span>
 
   <!-- BOOL -->
   <span ng-switch-when="bool" class="glyphicon" ng-class="{'glyphicon-ok text-success':value==1, 'glyphicon-minus text-danger':value!=1}"></span>
@@ -20,6 +23,7 @@
   <!-- HTML -->
   <span ng-switch-when="txt">{{ value | stripTags }}</span>
   
+  <!-- DEFAULT -->
   <span ng-switch-default>{{value}}</span>
   
 </ng-switch>
